--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     
     <meta property="og:title" content="Capturan al fundador de PornHub en la UNAQ" />
-    <meta property="og:description" content="El ex gobernador de nogales y fundador de PornHub fue  detenido la mañana del primero de abril" />
+    <meta property="og:description" content="El ex gobernador de nogales y fundador de PornHub fue  detenido la mañana del primero de Junio" />
     <meta property="og:image" content="https://nibblegg.github.io/capturadeljohhnysins.github.io/detencion%20del%20johnny%20sins.jpg" />
     <meta property="og:url" content="https://tusitio.github.io/" />
     <meta property="og:type" content="website" />
